Lots of work implementing shape files in ddOutput and ddOutputSingle loads. Need to finish and test to make sure that is works.
Need shape file stats to work. Should allow stats to link back, via a weak pointer, to the
shape file to save memory (or have auto-generation).

Lots of work on ddscat.par parsing. ddscat.par files will write. Need to implement
rest of reading, though. Yesterday's method was ungainly, so I'm simply converting sooner.
Need to adjust yesterday's template functions to be template classes, with _version support_.
This will enable ddscat.par version conversions.

Also, need to provide a default val-produing function. To finish the conversions.
Also, need better load errors (duplicate keys, for now, cause a hard fault. Test for
condition and report the appropriate error.)


git-svn-id: file:///mnt/svn/rtmath@475 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -111,6 +111,7 @@
     <ClInclude Include="rtmath\ddscat\ddscat.h" />
     <ClInclude Include="rtmath\ddscat\ddScattMatrix.h" />
     <ClInclude Include="rtmath\ddscat\ddweights.h" />
+    <ClInclude Include="rtmath\ddscat\parids.h" />
     <ClInclude Include="rtmath\ddscat\shapefile.h" />
     <ClInclude Include="rtmath\defs.h" />
     <ClInclude Include="rtmath\enums.h" />
