ddscat.par files should now load and save. I need to do testing of the features and produce a conversion program to interconvert 7.0 and 7.2-formatted files. ddpar now loads default values from a user-specified file. need to create this file. file should be considered part of the rtmath library distribution, and the location may be overridden in .rtmath, but should be hardcoded as relative to the install path.
config and debug namespaces now have functions defined with default-value convention.

parsers.h created for readability and as a place to put the older parsing functions.
os-funcions now includes debug information at file end.
root added to stdafx.h, with warning suppression in library build only. apps need to have
root functions blocked in a code segment that also suppresses their warnings.

for some reason, mie lost lib link to rtmath. reestablished it.


git-svn-id: file:///mnt/svn/rtmath@476 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="rtmath\netcdf\ncContainer.h" />
     <ClInclude Include="rtmath\netcdf\ncDim.h" />
     <ClInclude Include="rtmath\netcdf\ncVar.h" />
+    <ClInclude Include="rtmath\parsers.h" />
     <ClInclude Include="rtmath\pfFixed.h" />
     <ClInclude Include="rtmath\phaseFunc.h" />
     <ClInclude Include="rtmath\polynomial.h" />
