Okay, I've fixed all g++ errors. boost::filesystem binaries have C++0x / C++03 incompatibilities! I had to implement fcopy to replace copy_file in ddscat-genparams. Now for more testing...
git-svn-id: file:///mnt/svn/rtmath@480 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -4,6 +4,7 @@
 # but I can just delete the build and recreate for now.
 aux_source_directory (src libsrcs)
 #aux_source_directory (rtmath headers)
+#message("rtmath")
 
 include (common)
 
@@ -55,7 +56,8 @@ ENDIF(${MSVC})
 #message(${COMMON_CFLAGS})
 
 target_link_libraries (rtmath-tests ${COMMON_LIBS})
-IF(EXISTS(COMMON_CFLAGS))
+
+IF(DEFINED COMMON_CFLAGS )
 set_target_properties(rtmath PROPERTIES COMPILE_FLAGS ${COMMON_CFLAGS})
 set_target_properties(rtmath-static PROPERTIES COMPILE_FLAGS ${COMMON_CFLAGS})
 set_target_properties(rtmath-tests PROPERTIES COMPILE_FLAGS ${COMMON_CFLAGS})
