cmake coexistance with VS default project ensured by adding cmake define.
git-svn-id: file:///mnt/svn/rtmath@495 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -59,6 +59,9 @@ ELSE()
 	add_library (rtmath SHARED ${libsrcs} ${CMAKE_CURRENT_BINARY_DIR}/debug_subversion.h ${CMAKE_CURRENT_BINARY_DIR}/cmake-settings.h)
 ENDIF()
 
+# Used to allow VS default project to coexist with cmake project
+add_definitions(-DWITH_CMAKE)
+
 add_library (rtmath-static STATIC ${libsrcs} ${CMAKE_CURRENT_BINARY_DIR}/debug_subversion.h ${CMAKE_CURRENT_BINARY_DIR}/cmake-settings.h ${CMAKE_CURRENT_BINARY_DIR}/module-rtmath)
 
 aux_source_directory (tests modtests)
