--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory (conv-units)
 add_subdirectory (da)
 add_subdirectory (db-catalog-ddscat)
 add_subdirectory (ddparse)
+add_subdirectory (ddscat)
 add_subdirectory (ddscat-genparams)
 add_subdirectory (getm)
 add_subdirectory (mie)
