Some work on improving the build system. I eventually want the RPMS to list dependencies. I also want to have cmake abort if lib not found before linking.
git-svn-id: file:///mnt/svn/rtmath@506 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -75,6 +75,9 @@ set(CPACK_COMPONENT_LIBRARIES_REQUIRED 1)
 # TODO: add headers to rtmath solution build, in their appropriiate directories
 # TODO: add postgresql support
 
+#add_package_dependency(rtmath DEPENDS_ON HDF5)
+#add_package_dependency(rtmath DEPENDS_ON NetCDF)
+
 # This must always be last!
 include(CPack)
 
