--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -64,6 +64,19 @@ add_definitions(-DWITH_CMAKE)
 
 add_library (rtmath-static STATIC ${libsrcs} ${CMAKE_CURRENT_BINARY_DIR}/debug_subversion.h ${CMAKE_CURRENT_BINARY_DIR}/cmake-settings.h ${CMAKE_CURRENT_BINARY_DIR}/module-rtmath)
 
+get_target_property(rtmath_INCLUDE_DIRS rtmath INCLUDE_DIRECTORIES)
+#get_target_property(rtmath_LIBRARIES rtmath LIBRARIES)
+set(rtmath_LIBRARIES "")
+
+#message(${rtmath_LIBRARIES})
+#message(${rtmath_INCLUDE_DIRS})
+
+#add_package_dependency(NetCDF DEPENDS_ON HDF5)
+add_package_dependency(rtmath DEPENDS_ON HDF5)
+add_package_dependency(rtmath DEPENDS_ON NetCDF)
+#add_package_dependency(NetCDF DEPENDS_ON HDF5)
+#add_package_dependency(NetCDF DEPENDS_ON HDF5)
+
 aux_source_directory (tests modtests)
 add_executable (rtmath-tests ${modtests})
 target_link_libraries (rtmath-tests rtmath-static)
