rtmath now compiles on debian/ubuntu. Will add in package build dependencies eventually.
git-svn-id: file:///mnt/svn/rtmath@510 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -74,6 +74,11 @@ set(rtmath_LIBRARIES "")
 #add_package_dependency(NetCDF DEPENDS_ON HDF5)
 add_package_dependency(rtmath DEPENDS_ON HDF5)
 add_package_dependency(rtmath DEPENDS_ON NetCDF)
+add_package_dependency(rtmath DEPENDS_ON ROOT)
+
+target_link_libraries (rtmath ${COMMON_LIBS})
+target_link_libraries (rtmath-static ${COMMON_LIBS})
+
 #add_package_dependency(NetCDF DEPENDS_ON HDF5)
 #add_package_dependency(NetCDF DEPENDS_ON HDF5)
 
