git-svn-id: file:///mnt/svn/rtmath@511 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -89,8 +89,10 @@ set(CPACK_COMPONENT_LIBRARIES_REQUIRED 1)
 set(CPACK_RPM_PACKAGE_REQUIRES 
 	"cmake >= 2.8, root-physics, root, tcsh, postgresql-devel, boost-devel >= 1.45, boost-filesystem, gcc-c++ >= 4.6, netcdf-devel, netcdf-cxx-devel, netcdf-cxx4-devel, hdf5-devel"
 	)
-#add_package_dependency(rtmath DEPENDS_ON HDF5)
-#add_package_dependency(rtmath DEPENDS_ON NetCDF)
+
+set(CPACK_DEBIAN_PACKAGE_DEPENDS
+	"cmake (>= 2.8), root-v5.32.00, tcsh, boost-dev (>= 1.46.1), libboost-filesystem-dev (>= 1.46.1), g++ (>= 4:4.6.1), libnetcdf-dev, libnetcdf6, libhdf5-dev, libpqxx-dev, libpq-dev"
+	)
 
 # This must always be last!
 include(CPack)
