CMakeLists added for qt devel stuff.
git-svn-id: file:///mnt/svn/rtmath@514 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -17,5 +17,13 @@ add_subdirectory (shape)
 add_subdirectory (transmittance)
 add_subdirectory (uuid)
 
+# Control option for creating qt apps
+option ( MAKE_GUIS
+	"Make Qt GUI programs?" OFF)
+
+if (MAKE_GUIS)
+add_subdirectory (ddscat-genparams-qt)
+endif()
+
 
 
