Importing the arm-index-files program.
git-svn-id: file:///mnt/svn/rtmath@515 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Build the apps
 
 add_subdirectory (absorb-slab)
+add_subdirectory (arm-index-files)
 add_subdirectory (atmosplot)
 add_subdirectory (combo)
 add_subdirectory (conv-units)
