--- a/rtmath/rtmath-apps/arm-index-files/CMakeLists.txt
+++ b/rtmath/rtmath-apps/arm-index-files/CMakeLists.txt
@@ -1,12 +1,29 @@
 include (common)
 
-add_executable (rtmath-arm-index-files main.cpp)
-        find_package(PostgreSQL REQUIRED)
-        find_package(PQXX REQUIRED)
+set(MAKE_PS 0)
 
-addapp(rtmath-arm-index-files)
-add_package_dependency(rtmath-arm-index-files DEPENDS_ON PQXX)
-add_package_dependency(rtmath-arm-index-files DEPENDS_ON PostgreSQL)
-target_link_libraries (rtmath-arm-index-files pq pqxx)
+if (LOAD_PACKAGES)
+	if (NOT POSTGRESQL_FOUND)
+		message("Skipping arm-index-files, as postgresql not found")
+	endif()
+	if (NOT PQXX_FOUND)
+		message("Skipping arm-index-files, as PQXX not found")
+	endif()
+	if (PQXX_FOUND AND POSTGRESQL_FOUND)
+		set(MAKE_PS 1)
+	endif()
+else()
+	set(MAKE_PS 1)
+endif()
 
+if (MAKE_PS)
+	add_executable (rtmath-arm-index-files main.cpp)
+	addapp(rtmath-arm-index-files)
+	if (LOAD_PACKAGES)
+		add_package_dependency(rtmath-arm-index-files DEPENDS_ON PQXX)
+		add_package_dependency(rtmath-arm-index-files DEPENDS_ON PostgreSQL)
+	else()
+		target_link_libraries (rtmath-arm-index-files pq pqxx)
+	endif()
+endif()
 
