--- a/rtmath/rtmath-apps/ddscat-genparams-qt/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddscat-genparams-qt/CMakeLists.txt
@@ -4,7 +4,9 @@ set(genparams-qt_mocheaders frmmain.h)
 set(genparams-qt_uis frmmain.ui)
 set(genparams-qt_rcs frmmain.qrc)
 
-find_package( Qt4 REQUIRED )
+SET(QT_USE_QTOPENGL TRUE)
+
+find_package( Qt4 COMPONENTS QtCore QtGui REQUIRED )
 
 INCLUDE( ${QT_USE_FILE} )
 
@@ -14,7 +16,14 @@ QT4_WRAP_UI ( genparams-qt_UI_HDRS ${genparams-qt_uis} )
 
 QT4_WRAP_CPP ( genparams-qt_MOC_SRCS ${genparams-qt_mocheaders} )
 
-INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
+include_directories (
+	${CMAKE_BINARY_DIR}
+)
+
+include_directories ( BEFORE SYSTEM 
+	${QT_INCLUDE_DIR}
+#	/usr/include/QtGui
+)
 
 add_executable (rtmath-ddscat-genparams-qt 
 	main.cpp stdafx.cpp frmmain.cpp
