--- a/rtmath/rtmath/rtmath.vcxproj.filters
+++ b/rtmath/rtmath/rtmath.vcxproj.filters
@@ -327,6 +327,9 @@
     <ClInclude Include="rtmath\ddscat\mtab.h">
       <Filter>Header Files\ddscat</Filter>
     </ClInclude>
+    <ClInclude Include="rtmath\Public_Domain\bhmie.h">
+      <Filter>Header Files\Public Domain</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="rtmath\error\debug_subversion.h.template">
@@ -596,6 +599,9 @@
     </ClCompile>
     <ClCompile Include="src\mtab.cpp">
       <Filter>Source Files\ddscat</Filter>
+    </ClCompile>
+    <ClCompile Include="src\bhmie.cpp">
+      <Filter>Source Files\Public Domain</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
