Revised build system to set Visual Studio filters. I now almost no longer need to have a separate VS copy. Just need to figure out how to add a global filter for CMakeRules!
Added roottest so I can also do Linux builds and testing.


git-svn-id: file:///mnt/svn/rtmath@530 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory (ddscat)
 add_subdirectory (ddscat-genparams)
 add_subdirectory (getm)
 add_subdirectory (mie)
+add_subdirectory (roottest)
 add_subdirectory (rtmath-version)
 add_subdirectory (sector)
 add_subdirectory (shape)
