The build system now allows the modulefile to be renamed. os_functions new stuff fixed on Linux.
git-svn-id: file:///mnt/svn/rtmath@534 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -44,6 +44,11 @@ option ( INSTALL_DATA
 option ( INSTALL_MODULES
 	"Install environment-modules file for easy pathing"
 	OFF)
+set(MODULES_FILENAME
+	rtmath
+	CACHE STRING
+	"Name of the environment module"
+	)
 option ( USE_IPP
 	"Use Intel Integrated Performance Primitives" OFF)
 option ( USE_OPENMP
