Work on ddscat-genparams. qt app is really different from just pure console app. will eventually add a ncurses equivalent to qt.
began organising how to write a set of ddscat runs. will work extensively on this tomorrow.


git-svn-id: file:///mnt/svn/rtmath@536 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -109,12 +109,14 @@
     <ClInclude Include="rtmath\ddscat\ddOutputEnsemble.h" />
     <ClInclude Include="rtmath\ddscat\ddOutputSingle.h" />
     <ClInclude Include="rtmath\ddscat\ddpar.h" />
+    <ClInclude Include="rtmath\ddscat\ddparGenerator.h" />
     <ClInclude Include="rtmath\ddscat\ddscat.h" />
     <ClInclude Include="rtmath\ddscat\ddScattMatrix.h" />
     <ClInclude Include="rtmath\ddscat\ddweights.h" />
     <ClInclude Include="rtmath\ddscat\mtab.h" />
     <ClInclude Include="rtmath\ddscat\parids.h" />
     <ClInclude Include="rtmath\ddscat\shapefile.h" />
+    <ClInclude Include="rtmath\ddscat\shapes.h" />
     <ClInclude Include="rtmath\defs.h" />
     <ClInclude Include="rtmath\emd.h" />
     <ClInclude Include="rtmath\enums.h" />
